<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>insertion_base_station</name>
  <version>0.0.0</version>
  <description> Launch files and more code for the Insertion Base Station </description>
  <maintainer email="dalejo@us.es">David Alejo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend> eliko_driver </depend>
  <depend> rviz_satellite </depend>
  <depend> rviz2 </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
